# cdron_video_analysis

./: .gitignore  CMakeLists.txt  README.md  cdron_video_analysis.sln
Tools/: test_image.py
car_tools/: 车辆颜色识别.md
cdron_video_analysis/: CMakeLists.txt  casync_log.cpp  ccfg.cpp  ccfg.h  ccmd_param.h  cconfig.h  cdron_video_analysis.vcxproj  cdron_video_analysis.vcxproj.filters  cdron_video_analysls.cpp  cdron_video_analysls.h  cdrone_client_mgr.cpp  cdrone_client_mgr.h  cgpu_detector.cpp  cgpu_detector.h  chttp_queue_mgr.cpp  clib_util.h  clicense_plate.cpp  clicense_plate.h  clog.h  cmqtt_mgr.cpp  cmqtt_mgr.h  cmsg_buffer.cpp  cmsg_buffer.h  cnet_mgr.cpp  cnet_mgr.h  cnet_msg.cpp  cnet_msg.h  cnet_msg_header.h  cnet_msg_queue.cpp  cnet_msg_queue.h  cnet_msg_reserve.cpp  cnet_msg_reserve.h  cnet_session.cpp  cnet_session.h  cproxy.h  crandom.h  ctorch_classify.cpp  ctorch_classify.h  cvideo_analysis.cpp  cvideo_analysis.h  (+26 more)
cdron_video_analysis/HyperLPR/: utils.h
cdron_video_analysis/HyperLPR/c_api/: hyper_lpr_sdk.cc
cdron_video_analysis/HyperLPR/context_module/: hyper_lpr_context.cpp
cdron_video_analysis/HyperLPR/inference_helper_module/: inference_helper.cpp  inference_helper.h  inference_helper_log.h  inference_helper_mnn.cpp  inference_helper_mnn.h
cdron_video_analysis/HyperLPR/nn_implementation_module/recognition/: plate_recognition_tokenize.h
cface_detect/: ccfg.cpp  ccfg.h  cclient_msg_dispatch.h  cface_detect.cpp  cface_detect.h  cface_detect.vcxproj  cface_detect.vcxproj.filters  cface_detect_server.cpp  cface_detect_server.h  chttp_queue_mgr.h  cproxy.h  crypto.hpp  cvideo_analysis.cpp  cvideo_analysis.h  cweb_http_api_interface.h  cweb_http_api_mgr.cpp  cweb_http_api_mgr.h  cweb_http_api_proxy.h  cwebsocket_wan_server.h  cwebsocket_wan_session.cpp  cwebsocket_wan_session.h  cwebsocket_wan_session_handler.cpp  facedetectcnn-model.cpp  facedetectcnn.h  facedetection_export.h  main.cpp
clib/: casync_log.cpp  casync_log.h  clib.vcxproj  clib.vcxproj.filters  clog.cpp  cnet_define.h  cnoncopyable.h
